--- a/mod-sol-1/index.html
+++ b/mod-sol-1/index.html
@@ -8,10 +8,10 @@
   </head>
 <body ng-app='LunchCheck'>
    <div class="container" ng-controller="LunchCheckController">
-     <h1>Lunch Checker</h1>
+     <h1>-Lunch Checker</h1>
 
          <div class="form-group">
-             <input id="lunch-menu" type="text"
+						 <input type="text"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control"
              ng-model="lunch"
@@ -24,14 +24,15 @@
 
          <div class="form-group message" ng-class="styleAttribs()">
 
-           <p >{{feedbackMsg}}</p>
-
+           <p ><br/>{{feedbackMsg}}<br/></p>
+<!--
            <p>{{lunch}} <br><br>
            <span>Total lunch items: {{howMany}}</span>
           </p>
+-->
          </div>
-
    </div>
    <script src="js/angular.min.js"></script>
    <script src="js/app.js"></script>
+ </body>
 </html>
